--- a/timer.html
+++ b/timer.html
@@ -53,7 +53,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>⏱️ 정확한 원형 타이머</h1>
+    <h1>⏱️ David's 원형 타이머</h1>
     <div>
       <label for="minutes">분:</label>
       <input type="number" id="minutes" min="0" placeholder="0">
